--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,800;1,400;1,800&display=swap');
+
+#app {
+	height: 100%;
+}
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	position: relative;
+	height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+	background: #eeedec;
+	font-family: Playfair Display;
+
+	color: #e2d9dc;
+	margin: 0;
+	padding: 0;
+}
+
+.about,
+.kontak,
+.divisi {
+	background-color: #1d232a;
+}
+
+.bg-modal {
+	@apply bg-black bg-opacity-70 backdrop-blur-sm;
+	box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
+}
+
+.hero {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../src/assets/hero.jpg);
+}
+
+.about_hero {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../src/assets/hero2.png);
+}
+.divisi_hero {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../src/assets/divisiBackground.jpg);
+}
+.kontak_hero {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../src/assets/Hero4.jpg);
+}
+
+.text-shadow {
+	text-shadow: 2px 2px black;
 }
